# dictionary_check

./: README.md
dictionary_check/: Cargo.toml
dictionary_check/config/: dictionary_list.toml
dictionary_check/results/: result_synonyms_search.txt  result_userdic.txt  stopwords
dictionary_check/src/: common.rs  main.rs
dictionary_check/src/controller/: main_controller.rs
dictionary_check/src/env_config/: env_config.rs
dictionary_check/src/models/: mod.rs  search_dictionaries.rs  search_dictionary.rs
dictionary_check/src/service/: file_io_service.rs  mod.rs  std_io_service.rs
dictionary_check/src/utils/: io_utils.rs
payload/: Cargo.toml
payload/data/: process_info.toml
payload/src/: common.rs  main.rs
payload/src/model/: mod.rs  rust_process.rs
