[package]
name = "dictionary_check"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
flexi_logger = "0.27.4"
log = "0.4.20"
getset = "0.1.2"
derive-new = "0.6.0"
regex = "1.10.5"
async-trait = "0.1.83"
once_cell = "1.19.0"
toml = "0.8.19"